@@ -23,7 +23,6 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 // Vehicle application for V2X communication and event handling in Eclipse MOSAIC
 public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
@@ -39,46 +38,46 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
     private static final long EVENT_DURATION_NS = 30_000 * TIME.MILLI_SECOND;
     private static final long ACCIDENT_DURATION_NS = 30_000 * TIME.MILLI_SECOND;
     private static final long RESUME_ACCEL_DURATION_NS = 1_000 * TIME.MILLI_SECOND;
-    private static final long PRINT_INTERVAL_MS = 30_000 * TIME.MILLI_SECOND;
 
     // Static RSU positions
-    private static final Map<String, GeoPoint> STATIC_RSUS = new HashMap<>();
-    static {
-        STATIC_RSUS.put("rsu_0",  GeoPoint.latLon(52.451033, 13.295327, 0));
-        STATIC_RSUS.put("rsu_1",  GeoPoint.latLon(52.451406, 13.298062, 0));
-        STATIC_RSUS.put("rsu_2",  GeoPoint.latLon(52.452119, 13.301154, 0));
-        STATIC_RSUS.put("rsu_3",  GeoPoint.latLon(52.452153, 13.304256, 0));
-        STATIC_RSUS.put("rsu_4",  GeoPoint.latLon(52.450304, 13.301368, 0));
-        STATIC_RSUS.put("rsu_5",  GeoPoint.latLon(52.450268, 13.304328, 0));
-        STATIC_RSUS.put("rsu_6",  GeoPoint.latLon(52.448599, 13.305743, 0));
-        STATIC_RSUS.put("rsu_7",  GeoPoint.latLon(52.448538, 13.302883, 0));
-        STATIC_RSUS.put("rsu_8",  GeoPoint.latLon(52.447641, 13.301310, 0));
-        STATIC_RSUS.put("rsu_9",  GeoPoint.latLon(52.449290, 13.298481, 0));
-        STATIC_RSUS.put("rsu_10", GeoPoint.latLon(52.446686, 13.298421, 0));
-        STATIC_RSUS.put("rsu_11", GeoPoint.latLon(52.446557, 13.294261, 0));
-        STATIC_RSUS.put("rsu_12", GeoPoint.latLon(52.448404, 13.295637, 0));
-        STATIC_RSUS.put("rsu_13", GeoPoint.latLon(52.449206, 13.292616, 0));
-    }
+    private static final Map<String, GeoPoint> STATIC_RSUS = Map.ofEntries(
+        Map.entry("rsu_0",  GeoPoint.latLon(52.451033, 13.295327, 0)),
+        Map.entry("rsu_1",  GeoPoint.latLon(52.451406, 13.298062, 0)),
+        Map.entry("rsu_2",  GeoPoint.latLon(52.452119, 13.301154, 0)),
+        Map.entry("rsu_3",  GeoPoint.latLon(52.452153, 13.304256, 0)),
+        Map.entry("rsu_4",  GeoPoint.latLon(52.450304, 13.301368, 0)),
+        Map.entry("rsu_5",  GeoPoint.latLon(52.450268, 13.304328, 0)),
+        Map.entry("rsu_6",  GeoPoint.latLon(52.448599, 13.305743, 0)),
+        Map.entry("rsu_7",  GeoPoint.latLon(52.448538, 13.302883, 0)),
+        Map.entry("rsu_8",  GeoPoint.latLon(52.447641, 13.301310, 0)),
+        Map.entry("rsu_9",  GeoPoint.latLon(52.449290, 13.298481, 0)),
+        Map.entry("rsu_10", GeoPoint.latLon(52.446686, 13.298421, 0)),
+        Map.entry("rsu_11", GeoPoint.latLon(52.446557, 13.294261, 0)),
+        Map.entry("rsu_12", GeoPoint.latLon(52.448404, 13.295637, 0)),
+        Map.entry("rsu_13", GeoPoint.latLon(52.449206, 13.292616, 0))
+    );
+
+    private final MessageRouting broadcastRouting = getOs().getAdHocModule()
+        .createMessageRouting()
+        .broadcast()
+        .topological()
+        .build();
 
     // Vehicle state
-    private final Map<String, NodeRecord> neighborGraph = new HashMap<>();
+    private final Map<String, NodeRecord> neighborsGraph = new HashMap<>();
     
-    private final Set<Integer>   processedCams = new HashSet<>();
-    private final Set<Integer>   processedAcks = new HashSet<>();
+    private final Set<Integer> processedCams   = new HashSet<>();
+    private final Set<Integer> processedEvents = new HashSet<>();
     private AtomicInteger camIdSeq = new AtomicInteger();
-    private AtomicInteger ackIdSeq = new AtomicInteger();
 
-    private String  vehId;
+    private String vehId;
     private boolean ready = false;
     private double heading = 0.0;
     private double speed = 0.0;
     private double preAccidentSpeed = 0.0;
     private boolean inAccident = false;
-    private volatile boolean pendingBrake = false;
-    private volatile boolean pendingLaneChange = false;
-    private long lastPrintTime = 0;
-
-    // Lifecycle methods
+    private boolean pendingBrake = false;
+    private boolean pendingLaneChange = false;
 
     @Override
     public void onStartup() {
@@ -96,13 +95,13 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
         );
 
         scheduleEvent();
-        logInfo("vehicle initialization complete");
+        logInfo("VEHICLE_INITIALIZATION");
     }
 
     @Override
     public void onShutdown() {
         getOs().getAdHocModule().disable();
-        logInfo("vehicle shutdown complete");
+        logInfo("VEHICLE_SHUTDOWN");
     }
 
     @Override
@@ -140,26 +139,19 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
         }
     }
 
-    // Event handling
-
     @Override
     public void processEvent(Event event) {
         long now = getOs().getSimulationTime();
 
         if (ready) {
-            sendBeacon(now);
+            sendCam(now);
         }
         purgeStale(now);
-
-        if (now - lastPrintTime >= PRINT_INTERVAL_MS) {
-            lastPrintTime = now;
-        }
-
         scheduleEvent();
     }
 
     private void scheduleEvent() {
-        // Schedule the next beacon event
+        // Schedule the next event
         getOs().getEventManager().addEvent(
             getOs().getSimulationTime() + BEACON_PERIOD_MS,
             this
@@ -168,15 +160,15 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
 
     private void purgeStale(long now) {
         // Remove stale neighbor entries
-        neighborGraph.entrySet().removeIf(
+        neighborsGraph.entrySet().removeIf(
             e -> now - e.getValue().getCreationTimestamp() > CLEAN_THRESHOLD_MS
         );
     }
 
-    private void sendBeacon(long now) {
+    private void sendCam(long now) {
 
         CamMessage v2v = new CamMessage(
-            createBroadcastRouting(),
+            broadcastRouting,
             camIdSeq.getAndIncrement(),
             vehId,
             now,
@@ -188,7 +180,7 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
             false,
             false,
             INITIAL_TTL,
-            neighborGraph
+            neighborsGraph
         );
         getOs().getAdHocModule().sendV2xMessage(v2v);
     }
@@ -198,23 +190,25 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
     @Override
     public void onMessageReceived(ReceivedV2xMessage in) {
         V2xMessage msg = in.getMessage();
-        if (msg instanceof CamMessage v2v) {
+        if (msg instanceof CamMessage cam) {
             /*
             logInfo("RECEIVED VEHICLE_TO_VEHICLE : UNIQUE_ID = " + v2v.getMessageId() +
                     " | FROM = "      + v2v.getSenderId() +
                     " | TTL = "       + v2v.getTimeToLive() +
                     " | GRAPH_SIZE = "+ v2v.getNeighborGraph().size());
             */
-            handleCamReceived(v2v);
-        } else if (msg instanceof RsuToVehicleMessage rtv) {
-            logInfo("rsu to vehicle message received: uniqueId=" + rtv.getId() +
-                    " rsuSource=" + rtv.getRsuSource() +
-                    " vehicleTarget=" + rtv.getVehicleTarget() +
-                    " nextHop=" + rtv.getNextHop() +
-                    " command=" + rtv.getCommandEvent());
-            handleR2V(rtv);
-        } else if (msg instanceof EventACK ack) {
-            logInfo("EVENT_ACK :" +
+            handleCamReceived(cam);
+
+        } else if (msg instanceof EventMessage event && event.getNextHop().equals(vehId) && processedEvents.add(event.getId())) {
+            // Process event message if it is directed to this vehicle and not already processed
+            logInfo("EVENT MESSAGE RECEIVED: EVENT_ID =" + event.getId() +
+                    " | VEHICLE_TARGET = " + event.getTarget() +
+                    " | EVENT_TYPE = " + event.getSimpleClassName());
+            handleEventMessage(event);
+
+        } else if (msg instanceof EventACK ack && ack.getNextHop().equals(vehId)) {
+            // Process the ack if it is directed to this vehicle
+            logInfo("EVENT ACK RECEIVED:" +
                     " | ACK_ID = " + ack.getId() +
                     " | NEXT_HOP = " + ack.getNextHop());
             handleAckReceived(ack);
@@ -232,10 +226,10 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
         boolean reachableToRsu = distToRsu <= RSU_RANGE_M;
 
         // Process neighbor information
-        List<String> reachableNeighbors = new ArrayList<>(v2v.getNeighborGraph().keySet());
+        List<String> reachableNeighbors = new ArrayList<>(v2v.getNeighborsGraph().keySet());
         List<String> directNeighbors = reachableNeighbors.stream()
             .filter(id -> {
-                NodeRecord nr = v2v.getNeighborGraph().get(id);
+                NodeRecord nr = v2v.getNeighborsGraph().get(id);
                 return nr != null && nr.getDistanceFromVehicle() <= TX_RANGE_M;
             })
             .toList();
@@ -249,19 +243,19 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
             directNeighbors,
             v2v.getTimeStamp()
         );
-        neighborGraph.put(sender, recSelf);
+        neighborsGraph.put(sender, recSelf);
 
-        v2v.getNeighborGraph().forEach((id, rec) -> {
-            NodeRecord existing = neighborGraph.get(id);
+        v2v.getNeighborsGraph().forEach((id, rec) -> {
+            NodeRecord existing = neighborsGraph.get(id);
             if (existing == null || rec.getCreationTimestamp() > existing.getCreationTimestamp()) {
-                neighborGraph.put(id, rec);
+                neighborsGraph.put(id, rec);
             }
         });
 
         // Forward message if TTL allows
         if (v2v.getTimeToLive() > 1) {
             CamMessage fwd = new CamMessage(
-                createBroadcastRouting(),
+                broadcastRouting,
                 v2v.getId(),
                 v2v.getVehId(),
                 v2v.getTimeStamp(),
@@ -273,178 +267,159 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
                 v2v.isLeftTurnSignalOn(),
                 v2v.isRightTurnSignalOn(),
                 v2v.getTimeToLive() - 1,
-                v2v.getNeighborGraph()
+                v2v.getNeighborsGraph()
             );
             getOs().getAdHocModule().sendV2xMessage(fwd);
         }
     }
 
-    private void handleR2V(RsuToVehicleMessage rtv) {
-        // Prevent loops and check if this vehicle is the next hop
-        if (rtv.getForwardingTrail().contains(vehId) || !rtv.getNextHop().equalsIgnoreCase(vehId)) {
+    private void handleEventMessage(EventMessage event) {
+        
+        if(event.getTarget().equals(vehId)) {
+            processEvent(event);
+        } else {
+            forwardEvent(event);
+        }
+    }
+
+    private void processEvent(EventMessage event) {
+
+        // If the event is expired, do not process it
+        if (event.getExpiryTimestamp() < getOs().getSimulationTime()) {
+            logInfo(String.format(
+                "EVENT_NOT_PROCESSED : UNIQUE_ID: %d | VEHICLE_TARGET: %s | EVENT_EXPIRED",
+                event.getId(), event.getTarget()
+            ));
             return;
         }
 
-        // Handle message for this vehicle
-        if (rtv.getVehicleTarget().equalsIgnoreCase(vehId)) {
-            logInfo("FINAL TARGET REACHED | SENDING ACK : UNIQUE_ID = " + rtv.getId());
-            EventMessage ev = rtv.getCommandEvent();
-            switch (ev.getEventType()) {
-                case "ACCIDENT":
-                    logInfo("accident event received: scheduling emergency brake");
-                    pendingBrake = true;
-                    break;
-                case "LANE_CLOSURE":
-                    logInfo("lane closure event received: scheduling lane change");
-                    pendingLaneChange = true;
-                    break;
-                default:
-                    logInfo("unknown event type: " + ev.getEventType());
-            }
-            sendAcknowledgement(rtv, ev.getId());
-            return;
+        logInfo(String.format(
+            "FINAL TARGET REACHED | PROCESSING EVENT : UNIQUE_ID = %d", 
+            event.getId()
+        ));
+        if(event instanceof AccidentEvent) {
+            logInfo("ACCIDENT EVENT RECEIVED: SCHEDULING EMERGENCY BRAKE");
+            pendingBrake = true;
+        } else {
+            logInfo("UNKNOWN EVENT TYPE: " + event.getSimpleClassName());
         }
 
-        // Forward message to destination
-        String dst = rtv.getVehicleTarget();
-        NodeRecord rec = neighborGraph.get(dst);
-        if (rec != null && rec.getDistanceFromVehicle() <= TX_RANGE_M) {
-            List<String> trail = new ArrayList<>(rtv.getForwardingTrail());
-            trail.add(vehId);
-            RsuToVehicleMessage direct = new RsuToVehicleMessage(
-                createBroadcastRouting(),
-                rtv.getTimestamp(),
-                rtv.getExpiryTimestamp(),
-                rtv.getRsuSource(),
-                dst,
-                dst,
-                rtv.getCommandEvent(),
-                trail
-            );
-            getOs().getAdHocModule().sendV2xMessage(direct);
+        // Send acknowledgement back to the source
+        sendAcknowledgement(event);
+    }
+
+    private void sendAcknowledgement(EventMessage event) {
+        
+        long now = getOs().getSimulationTime();
+
+        // Build reverse path for ACK
+        List<String> forwardingTrail = event.getForwardingTrail();
+        forwardingTrail.removeLast(); // Remove the last hop (this vehicle)
+
+        EventACK ack = new EventACK(
+            broadcastRouting,
+            event.getId(),
+            now,
+            now + (10_000 * TIME.MILLI_SECOND),
+            forwardingTrail
+        );
+
+        getOs().getAdHocModule().sendV2xMessage(ack);
+        logInfo(String.format(
+            "ACK SENT: EVENT_ID = %d | NEXT_HOP = %s", 
+            ack.getId(), ack.getNextHop()
+        ));
+    }
+
+    private void forwardEvent(EventMessage event) {
+
+        // If the event is expired, do not forward it
+        if (event.getExpiryTimestamp() < getOs().getSimulationTime()) {
+            logInfo(String.format(
+                "EVENT_NOT_FORWARDED : UNIQUE_ID: %d | VEHICLE_TARGET: %s | EVENT_EXPIRED",
+                event.getId(), event.getTarget()
+            ));
             return;
         }
 
         // Select next hop for forwarding
-        String next = chooseNextHop(dst);
-        if (next == null) {
+        String target = event.getTarget();
+        String nextHop = null;
+        
+        NodeRecord rec = neighborsGraph.get(target);
+        if (rec != null && rec.getDistanceFromVehicle() <= TX_RANGE_M) {
+            nextHop = target;
+        } else {
+            nextHop = selectNextHop(target);
+        }
+
+        // If no next hop is found, do not forward the event
+        if (nextHop == null) {
+            logInfo(String.format(
+                "EVENT_NOT_FORWARDED : UNIQUE_ID: %s | VEHICLE_TARGET: %s | NO_NEXT_HOP_FOUND",
+                event.getId(), target
+            ));
             return;
         }
 
-        logInfo("forwarding rsu to vehicle message: uniqueId=" + rtv.getId() + " nextHop=" + next);
-        List<String> trail = new ArrayList<>(rtv.getForwardingTrail());
-        trail.add(vehId);
-        RsuToVehicleMessage fwd = new RsuToVehicleMessage(
-            createBroadcastRouting(),
-            rtv.getTimestamp(),
-            rtv.getExpiryTimestamp(),
-            rtv.getRsuSource(),
-            dst,
-            next,
-            rtv.getCommandEvent(),
-            trail
-        );
-        getOs().getAdHocModule().sendV2xMessage(fwd);
-    }
+        // Add the next hop to the forwarding trail
+        List<String> forwardingTrail = event.getForwardingTrail();
+        forwardingTrail.add(nextHop);
 
-    private void sendAcknowledgement(RsuToVehicleMessage originalMessage, int eventId) {
-        long currentTime = getOs().getSimulationTime();
-
-        // Build reverse path for ACK
-        List<String> backwardPath = new ArrayList<>(originalMessage.getForwardingTrail());
-        Collections.reverse(backwardPath);
-
-        if (backwardPath.isEmpty()) {
-            logInfo("empty forwarding trail in rsu message");
-            return;
-        }
-
-        String nextHop = backwardPath.get(0);
-        List<String> remainingPath = backwardPath.size() > 1
-            ? new ArrayList<>(backwardPath.subList(1, backwardPath.size()))
-            : Collections.emptyList();
-
-
-        EventACK acknowledgement = new EventACK(
-            createBroadcastRouting(),
-            eventId,
-            currentTime,
-            currentTime + (10_000 * TIME.MILLI_SECOND),
-            vehId,
-            originalMessage.getRsuSource(),
-            nextHop,
-            remainingPath
+        // Copy the message to forward the event
+        EventMessage eventCopy = new AccidentEvent(
+            broadcastRouting,
+            event.getId(),
+            event.getTimestamp(),
+            event.getExpiryTimestamp(),
+            event.getTarget(),
+            forwardingTrail,
+            ((AccidentEvent) event).getSeverity()
         );
 
-        logInfo("sending ack: " + acknowledgement.getId() + " originalId=" + eventId
-                + " nextHop=" + nextHop);
-
-        processedAcks.add(acknowledgement.getId());
-        getOs().getAdHocModule().sendV2xMessage(acknowledgement);
+        // Send the event message
+        getOs().getAdHocModule().sendV2xMessage(eventCopy);
+        logInfo(String.format(
+            "EVENT_FORWARDED_TO_VEHICLE : UNIQUE_ID: %d | VEHICLE_TARGET: %s | NEXT_HOP: %s",
+            event.getId(), target, nextHop
+        ));
     }
 
     private void handleAckReceived(EventACK ack) {
-    
-        if (!processedAcks.add(ack.getId())) {
-            // logDebug("IGNORED VEHICLE_TO_RSU_ACK : DUPLICATE");
-            return;
-        }
-    
-        if (!ack.getNextHop().equalsIgnoreCase(vehId)) {
-            // logDebug("IGNORED VEHICLE_TO_RSU_ACK : WRONG_NEXT_HOP");
+
+        // If the ACK is expired, do not process it
+        if (ack.getExpiryTimestamp() < getOs().getSimulationTime()) {
+            logInfo(String.format(
+                "ACK_NOT_PROCESSED : UNIQUE_ID: %d | ACK_EXPIRED",
+                ack.getId()
+            ));
             return;
         }
 
-        double distToRsu = computeRsuDistance();
-        if (distToRsu <= RSU_RANGE_M) {
-            // logInfo("DIRECT ACK DELIVERY TO RSU : UNIQUE_ID = " + ack.getId());
-            EventACK direct = new EventACK(
-                createBroadcastRouting(),
-                ack.getId(),
-                ack.getTimestamp(),
-                ack.getExpiryTimestamp(),
-                ack.getVehicleIdentifier(),
-                ack.getRsuDestination(),
-                ack.getRsuDestination(),
-                Collections.emptyList()
-            );
-            getOs().getAdHocModule().sendV2xMessage(direct);
-            return;
-        }
+        // Remove the last hop (this vehicle)
+        List<String> checklist = ack.getChecklist();
+        checklist.removeLast(); 
 
-        // Forward to next hop
-        List<String> checklist = new ArrayList<>(ack.getChecklist());
-        if (checklist.isEmpty()) {
-            return;
-        }
-        String nextHop = checklist.remove(0);
-        logInfo("FORWARDING VEHICLE_TO_RSU_ACK : UNIQUE_ID = " + ack.getId()
-              + " | NEXT_HOP = " + nextHop);
-        EventACK fwd = new EventACK(
-            createBroadcastRouting(),
+        // Copy the ACK message to forward it
+        EventACK ackCopy = new EventACK(
+            broadcastRouting,
             ack.getId(),
             ack.getTimestamp(),
             ack.getExpiryTimestamp(),
-            ack.getVehicleIdentifier(),
-            ack.getRsuDestination(),
-            nextHop,
             checklist
         );
-        processedAcks.add(ack.getId());
-        getOs().getAdHocModule().sendV2xMessage(fwd);
-    }
- 
-    private MessageRouting createBroadcastRouting() {
-        return getOs().getAdHocModule()
-            .createMessageRouting()
-            .broadcast()
-            .topological()
-            .build();
+
+        // Send the ACK message copy
+        getOs().getAdHocModule().sendV2xMessage(ackCopy);
+        logInfo(String.format(
+            "ACK SENT: EVENT_ID = %d | NEXT_HOP = %s", 
+            ackCopy.getId(), ackCopy.getNextHop()
+        ));
     }
 
-    private String chooseNextHop(String dst) {
+    private String selectNextHop(String dst) {
         // Find direct neighbors within transmission range
-        List<String> direct = neighborGraph.entrySet().stream()
+        List<String> direct = neighborsGraph.entrySet().stream()
             .filter(e -> e.getValue().getDistanceFromVehicle() <= TX_RANGE_M)
             .map(Map.Entry::getKey)
             .filter(n -> !n.equalsIgnoreCase(vehId))
@@ -456,11 +431,11 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
 
         // Prefer two-hop neighbors that can reach the destination
         List<String> twoHop = direct.stream()
-            .filter(n -> neighborGraph.get(n).getReachableNeighbors().contains(dst))
+            .filter(n -> neighborsGraph.get(n).getReachableNeighbors().contains(dst))
             .toList();
         if (!twoHop.isEmpty()) {
             return twoHop.stream()
-                .min(Comparator.comparingDouble(n -> neighborGraph.get(n).getDistanceFromVehicle()))
+                .min(Comparator.comparingDouble(n -> neighborsGraph.get(n).getDistanceFromVehicle()))
                 .get();
         }
 
@@ -474,7 +449,7 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
 
         // Fallback to neighbor with most connections
         return direct.stream()
-            .max(Comparator.comparingInt(n -> neighborGraph.get(n).getReachableNeighbors().size()))
+            .max(Comparator.comparingInt(n -> neighborsGraph.get(n).getReachableNeighbors().size()))
             .orElse(null);
     }
 
@@ -499,7 +474,7 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
                 return hops;
             }
 
-            NodeRecord rec = neighborGraph.get(cur);
+            NodeRecord rec = neighborsGraph.get(cur);
             if (rec == null) {
                 continue;
             }
@@ -533,7 +508,7 @@ public final class VehApp extends AbstractApplication<VehicleOperatingSystem>
         return STATIC_RSUS.entrySet().stream()
             .filter(entry -> vehiclePosition.distanceTo(entry.getValue()) <= RSU_RANGE_M)
             .map(Map.Entry::getKey)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override public void onMessageTransmitted(V2xMessageTransmission tx) { /* No action required */ }
